# bazel-rust-sample

./: .gitignore  BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  WORKSPACE
.cargo/: config.toml
src/: main.rs
